HelloUltraviolet/Fixtures/RejectedSource/Statements/DeferNonLocal/Expected.uv
//! Expected diagnostic metadata for the DeferNonLocal rejected-source specimen.

expectedDiagnostic("E-SEM-3152", "rule.18.Defer-NonLocal-Err")
